Changelog
=========

0.1.10 (unreleased)
-------------------

- Refactor resuable cycle logic into a Backend class.

- Ensure the listen address is in correct state before moving onto next
  backend.


0.1.9 (2012-10-01)
------------------

- Add a default emergency page.


0.1.8 (2012-07-03)
------------------

- No changes - release to fix version sync weirdness?


0.1.7 (2012-07-03)
------------------

- Restore python2.4 compatibility


0.1.6 (2012-02-03)
------------------

 - Better handling of migrations to ${buildout:run-directory}


0.1.5 (2011-08-26)
------------------

 - If there is a ${buildout:run-directory}, put pid file in there
