@@ -4,6 +4,7 @@ parts =
     test
     pound
     cycle
+    cycle-nowakeup
 develop = .
 versions = versions
 
@@ -14,11 +15,11 @@ eggs = isotoma.recipe.pound
 [pound]
 recipe = isotoma.recipe.pound
 address = 127.0.0.1
-port = 8079
+port = 9079
 backends =
-    127.0.0.1:8080
-    127.0.0.1:8081
-    127.0.0.1:8082
+    127.0.0.1:9080
+    127.0.0.1:9081
+    127.0.0.1:9082
 control = ${buildout:parts-directory}/pound.ctl
 pidfile = ${buildout:parts-directory}/pound.pid
 
@@ -26,10 +27,16 @@ pidfile = ${buildout:parts-directory}/pound.pid
 recipe = isotoma.recipe.pound:cycle
 grace = 1
 backends =
-    /bin/true:/bin/true
-    /bin/true:/bin/true
-    /bin/true:/bin/true
+    /bin/true:/usr/bin/python ci-http-server.py 9080
+    /bin/true:/usr/bin/python ci-http-server.py 9081
+    /bin/true:/usr/bin/python ci-http-server.py 9082
+wakeup =
+    /
 control = ${pound:control}
+
+[cycle-nowakeup]
+<= cycle
+wakeup = 
 
 [versions]
 zc.buildout = 1.4.3
@@ -42,3 +49,5 @@ zope.exceptions = 3.6.1
 isotoma.recipe.gocaptain = 0.0.9
 Cheetah = 2.4.4
 Markdown = 2.1.1
+missingbits = 0.0.15
+
